# course-recommendation-service

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  pyproject.toml  readme.md  requirements.txt
ingest/: index_documents.py  index_documents_hybrid.py  readme.md
scripts/: upload_snapshots.sh
src/: agent.py  chat.py  crud.py  database.py  main.py  prompts.py  recommend.py  tools.py
src/core/: config.py  constants.py
src/memory/: redis.py
src/models/: __init__.py
src/schemas/: chat.py  recommend.py
src/services/: hybrid_searcher.py  neural_searcher.py
