[tool.poetry]
name = "Saksham AI APIs"
version = "0.1.0"
description = ""
authors = ["Vaibhav Bhuva <vaibhav.bhuva@tarento.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
google-cloud-aiplatform = "^1.74.0"
openai = "^1.57.0"
qdrant-client = {extras = ["fastembed"], version = "^1.12.1"}
langchain-text-splitters = "^0.3.2"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
